<resources>
    <string name="app_name">KuRo Scanner</string>
    <string name="title_main">KuRo Scanner</string>
    <string name="title_login">登录</string>
    <string name="title_about">关于</string>
    <string name="title_sms">短信验证</string>
    <string name="tab_sms_login">短信登录</string>
    <string name="tab_qrcode_login">扫码登录</string>
    <string name="tab_cookie_login">Cookie登录</string>
    <string name="btn_send_code">发送验证码</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_add_account">添加账户</string>
    <string name="btn_delete_account">删除账户</string>
    <string name="btn_start_screen">开始屏幕扫描</string>
    <string name="btn_start_stream">开始直播扫描</string>
    <string name="btn_stop">停止</string>
    <string name="btn_about">关于</string>
    <string name="btn_update_qrcode">刷新二维码</string>
    <string name="btn_official_login">官方登录</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_code">请输入验证码</string>
    <string name="hint_cookie">请输入Cookie</string>
    <string name="hint_note">备注</string>
    <string name="hint_room_id">请输入房间号</string>
    <string name="check_auto_screen">自动屏幕扫描</string>
    <string name="check_auto_exit">自动退出</string>
    <string name="check_auto_login">自动登录</string>
    <string name="msg_login_success">登录成功</string>
    <string name="msg_login_failed">登录失败</string>
    <string name="msg_sms_sent">验证码已发送</string>
    <string name="msg_account_added">账户已添加</string>
    <string name="msg_account_deleted">账户已删除</string>
    <string name="msg_select_account">请选择账户</string>
    <string name="msg_no_account">暂无账户，请先添加</string>
    <string name="msg_scanning">正在扫描...</string>
    <string name="msg_scan_result">扫描结果:</string>
    <string name="msg_stream_offline">直播间未开播</string>
    <string name="msg_stream_not_found">直播间不存在</string>
    <string name="msg_qrcode_expired">二维码已过期</string>
    <string name="msg_verify_success">验证成功</string>
    <string name="label_account_list">账户列表</string>
    <string name="label_name">昵称</string>
    <string name="label_mobile">手机号</string>
    <string name="label_uid">UID</string>
    <string name="label_note">备注</string>
    <string name="label_scan_mode">扫描模式</string>
    <string name="label_stream_source">直播源</string>
    <string name="label_bilibili">哔哩哔哩</string>
    <string name="label_douyin">抖音</string>
</resources>